# RustOnBoarding

./: Cargo.toml  LICENSE  README.md
board-server/: Cargo.toml  README.md
board-server/configs/: local.json
board-server/src/: error.rs  gen_openapi.rs  handlers.rs  json.rs  lib.rs  main.rs  metrics.rs  openapi.rs
board-server/src/config/: mod.rs
board-server/src/mongo/: client.rs  mod.rs  users.rs
board-server/src/updown/: mod.rs  startup.rs
board-server/tests/: health_check.rs
ci_base/: Dockerfile
graph-ql-server/: Cargo.toml  README.md
graph-ql-server/configs/: local.json
graph-ql-server/src/: error.rs  gen_openapi.rs  handlers.rs  lib.rs  main.rs  metrics.rs
graph-ql-server/src/config/: builder.rs  mod.rs
graph-ql-server/src/mongo/: client.rs  languages.rs  mod.rs  users_graph.rs
graph-ql-server/src/updown/: shutdown.rs  startup.rs
graph-ql-server/src/user_schema/: mod.rs  model.rs
graph-ql-server/tests/: health_check.rs
libs/bongo-mong/: Cargo.toml  README.md
libs/bongo-mong/.gitlab/merge_request_templates/: default.md
libs/bongo-mong/examples/collection/: main.rs  mongo_pools.json
libs/bongo-mong/examples/installations/: fixtures.rs  main.rs  mongo_pools.json
libs/bongo-mong/examples/simple/: main.rs  mongo_pools.json
libs/bongo-mong/src/: dao.rs  error.rs  lib.rs  pools.rs
libs/bongo-mong/src/collections/: installations.rs  mod.rs  redemptions.rs
libs/bongo-mong/src/config/: mod.rs  options.rs  path.rs
libs/sentry-wrapper/: Cargo.toml  README.md
libs/sentry-wrapper/src/: lib.rs
libs/tracing-wrapper/: Cargo.toml  README.md
libs/tracing-wrapper/src/: lib.rs  lib_draft.rs
