[package]
name = "board-server"
version = "0.1.0"
edition = "2021"
default-run = "board-server"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "board-server"

[[bin]]
path = "src/gen_openapi.rs"
name = "gen-openapi"


[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
hyper = "0.14"

utoipa = "1"

serde = "1"
serde_json = "1"
atomic = "0.5.1"
thiserror = "1"

tracing-wrapper = { version = "0.1", path = "../libs/tracing-wrapper" }

metrics = "0.19"
metrics-exporter-prometheus = "0.10"
procfs = "0.13"
libc = "0.2"

sentry-wrapper = { version = "0.1", path = "../libs/sentry-wrapper" }
config = "0.12"
once_cell = "1"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
tracing = "0.1"
tracing-subscriber = "0.2.0"
tower-request-id = "0.2.0"
reqwest-tracing = "0.3.0"
http = "0.2.8"
bytes = "1.2.1"
http-body = "0.4.5"

bongo-mong = { version = "0.3", features = ["collections"], path = "../libs/bongo-mong"}
rand = "0.8.4"
axum-typed-websockets = "0.4.0"
futures = "0.3.24"
state = "0.5.3"
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.9"
