[package]
name = "graph-ql-server"
version = "0.1.0"
edition = "2021"
default-run = "graph-ql-server"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "graph-ql-server"

[[bin]]
path = "src/gen_openapi.rs"
name = "gen-openapi"


[dependencies]
axum = "0.5.4"
tokio = { version = "1.18.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
hyper = "0.14"

utoipa = "1"

serde = "1"
serde_json = "1"

thiserror = "1"

tracing-wrapper = { version = "0.1", path = "../libs/tracing-wrapper" }

metrics = "0.19"
metrics-exporter-prometheus = "0.10"
procfs = "0.13"
libc = "0.2"

sentry-wrapper = { version = "0.1", path = "../libs/sentry-wrapper" }
config = "0.12"
once_cell = "1"
context = "2.1.0"
slab = "0.4.6"
uuid = { version = "1.0.0", features = ["v4"] }


# GraphQL

async-graphql = "3.0.38"
async-graphql-axum = "4.0.11"

# Mongodb
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes

bongo-mong = { version = "0.3", features = ["collections"], path = "../libs/bongo-mong"}

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
