[package]
name = "bongo-mong"
version = "0.3.0"
edition = "2021"

[features]
collections = ["bongo-uuid"]
bongo-uuid = ["mongodb/bson-uuid-0_8"]
chrono = ["mongodb/bson-chrono-0_4"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "simple"
path = "examples/simple/main.rs"

[[example]]
name = "collection"
path = "examples/collection/main.rs"

[[example]]
name = "installations"
path = "examples/installations/main.rs"

[dependencies]
async-trait = "0.1.52"
config = "0.12"
mongodb = "2.1.0"
parking_lot = "0.12.0"
serde = "1"
thiserror = "1"
tokio = "1"
uuid = "0.8"

[dev-dependencies]
once_cell = "1.9"
